--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-sflkit>=0.2.15
+sflkit @ git+https://github.com/uds-se/sflkit
 sflkitlib>=0.0.3
-pytest>=8.0.1
+pytest>=8.0.2
 pytest-cov>=4.1.0
 pytest-json-report>=1.5.0
-coverage>=7.4.2
+coverage>=7.4.3
 numpy>=1.26.4
