--- a/.github/workflows/test-pyrep.yml
+++ b/.github/workflows/test-pyrep.yml
@@ -19,6 +19,8 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.11"
+    - name: setup pyenv
+      uses: "gabrielfalcao/pyenv-action@v13"
     - name: Install dependencies
       run: |
         sudo apt-get update && sudo apt-get install -y python3-dev
