--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,8 @@ sflkitlib>=0.0.3
 pytest>=8.0.2
 pytest-cov>=4.1.0
 pytest-json-report>=1.5.0
-coverage>=7.4.3
+coverage>=7.5.4
 numpy>=1.26.4
 tests4py @ git+https://github.com/smythi93/Tests4Py@baede37342310f9865412a3981ee16307f9cb8ae
 gensim>=4.3.2
-tensorflow>=2.16.1
-tensorflow-probability>=0.24.0
-tf-keras>=2.16.0
+scipy>=1.13.1
