--- a/.github/workflows/test-fixkit.yml
+++ b/.github/workflows/test-fixkit.yml
@@ -36,9 +36,8 @@ jobs:
       with:
         name: Test Report
         path: report.html
-#    Todo: Add coveralls when repo is public
-#    - name: Coveralls
-#      uses: coverallsapp/github-action@master
-#      with:
-#        github-token: ${{ secrets.GITHUB_TOKEN }}
-#        path-to-lcov: coverage.lcov
+    - name: Coveralls
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        path-to-lcov: coverage.lcov
