--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ dependencies = [
     "coverage>=7.4.3",
     "numpy>=1.26.4",
     "multiset>=3.1.0",
-    "tests4py @ git+https://github.com/smythi93/Tests4Py@52c175fb772eac13bd7e7a85f9945fb1a9ec2a91",
+    "tests4py>=0.0.7",
 ]
 
 [project.urls]
