--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,4 @@ pytest-json-report>=1.5.0
 coverage>=7.4.3
 multiset>=3.1.0
 numpy>=2.0.0
-tests4py @ git+https://github.com/smythi93/Tests4Py@baede37342310f9865412a3981ee16307f9cb8ae
+tests4py>=0.0.7
